Add support for concept aliases & bulk mode switching

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -616,17 +616,18 @@
     "\n",
     "import pickle\n",
     "\n",
-    "# FIXME Disabled to lower memory footprint for Jupyter Hub.\n",
-    "# import spacy\n",
-    "# TODO Disabled to lower memory footprint for Jupyter Hub.\n",
-    "# import faiss\n",
+    "import faiss\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
     "\n",
     "class Candidate:\n",
     "    \n",
-    "    def __init__(self, identifier, term, definition, score):\n",
-    "        self.score = score\n",
-    "        self.identifier = identifier\n",
-    "        self.term = term\n",
+    "    def __init__(self, distance, alias, uid, concept, definition):\n",
+    "        self.distance = distance\n",
+    "        self.alias = alias\n",
+    "        self.uid = uid\n",
+    "        self.concept = concept\n",
     "        self.definition = definition\n",
     "    \n",
     "    def __repr__(self):\n",
@@ -635,84 +636,85 @@
     "\n",
     "class EntityLinker:\n",
     "    \n",
-    "    def __init__(self, nlp):\n",
+    "    def __init__(self, bulk):\n",
+    "        self.bulk = bulk\n",
     "        self.ontology = None\n",
-    "        self.terms = None\n",
+    "        self.aliases = None\n",
     "        self.model = None\n",
     "        self.index = None\n",
-    "        self.nlp = nlp\n",
     "    \n",
-    "    def link(self, mentions):\n",
+    "    def link(self, mentions, threshold=0.8):\n",
     "        print('WARN   Entity Linking   '\n",
-    "              'Performances are low because the component is not part of the NLP pipeline.')\n",
-    "        selections = self.candidates(mentions)\n",
-    "        return [self.disambiguate(mention, candidates)\n",
-    "                for mention, candidates in zip(mentions, selections)]\n",
+    "              'Low performances because component not part of the NLP pipeline.')\n",
+    "        selections = self.candidates(mentions, 3)\n",
+    "        return [self.disambiguate(cs, m, None, threshold) for m, cs in selections]\n",
     "    \n",
-    "    def disambiguate(self, mention, candidates, threshold=0.6):\n",
-    "        def _(cands):\n",
-    "            # FIXME Proxy to try to get context as if the component was part of the NLP pipeline.\n",
-    "            doc = self.nlp(mention)\n",
-    "            similarities = [(doc.similarity(self.nlp(x.definition.replace(mention, ''))), x)\n",
-    "                            for x in cands if x.definition]\n",
-    "            ranked = sorted(similarities, key=lambda x: x[0], reverse=True)\n",
-    "            return ranked[0]\n",
-    "        zeros = [x for x in candidates if x.score == 0]\n",
+    "    def disambiguate(self, candidates, mention, context, threshold):\n",
+    "        # TODO Disambiguation requires the component to be part of the NLP pipeline.        \n",
+    "        zeros = [x for x in candidates if x.distance == 0]\n",
     "        if zeros:\n",
-    "            # FIXME Disabled to lower memory footprint for Jupyter Hub.\n",
-    "            # chosen = _(zeros)\n",
-    "            # return chosen\n",
-    "            return zeros[0]\n",
+    "            chosen = sorted(zeros, key=lambda x: len(x.concept))[0]\n",
+    "            return chosen\n",
     "        else:\n",
-    "            # FIXME Disabled to lower memory footprint for Jupyter Hub.\n",
-    "            # chosen = _(candidates)\n",
-    "            # return chosen if chosen[0] >= threshold else None\n",
-    "            return sorted(candidates, key=lambda x: x.score)[0]\n",
+    "            chosen = sorted(candidates, key=lambda x: x.distance)[0]\n",
+    "            return chosen if chosen.distance <= threshold else None\n",
     "    \n",
-    "    def candidates(self, mentions, limit=3):\n",
+    "    def candidates(self, mentions, limit):\n",
+    "        def _(d, i):\n",
+    "            alias, uid = self.aliases[int(i)]\n",
+    "            return Candidate(d, alias, uid, *self.ontology[uid])\n",
     "        embeddings = self.model.transform(mentions)\n",
-    "        # TODO Disabled to lower memory footprint for Jupyter Hub.\n",
-    "        # distances, indexes = self.index.search(embeddings.toarray(), limit)\n",
-    "        distances, indexes = self.index.kneighbors(embeddings, limit)\n",
-    "        return [[Candidate(*self.terms[i], d) for i, d in zip(indexes[k], distances[k])]\n",
-    "                for k in range(len(mentions))]\n",
+    "        if self.bulk:\n",
+    "            distances, indexes = self.index.search(embeddings.toarray(), limit)\n",
+    "        else:\n",
+    "            distances, indexes = self.index.kneighbors(embeddings, limit)\n",
+    "        results = np.stack((distances, indexes), axis=2)\n",
+    "        return [(m, [_(d, i) for d, i in rs]) for m, rs in zip(mentions, results)]\n",
     "    \n",
     "    def train(self, ontology, model_params, index_params):\n",
-    "        import numpy as np\n",
-    "        from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "        from sklearn.neighbors import NearestNeighbors\n",
-    "        self.ontology = [(k, v[0], v[1]) for k, v in ontology.items()]\n",
+    "        self.ontology = {k: (v[0], v[2]) for k, v in ontology.items()}\n",
     "        self.model = TfidfVectorizer(**model_params)\n",
-    "        terms = [x for _, x, _ in self.ontology]\n",
-    "        embeddings = self.model.fit_transform(terms)\n",
+    "        aliases = [(x, k) for k, v in ontology.items() for x in [v[0], *v[1]]]\n",
+    "        embeddings = self.model.fit_transform(x for x, _ in aliases)\n",
     "        flags = np.array(embeddings.sum(axis=1) != 0).reshape(-1)\n",
     "        filtered_embeddings = embeddings[flags]\n",
-    "        self.terms = [term for term, flag in zip(self.ontology, flags) if flag]\n",
-    "        # TODO Disabled to lower memory footprint for Jupyter Hub.\n",
-    "        # self.index = faiss.IndexFlatL2(filtered_embeddings.shape[1])\n",
-    "        # self.index.add(filtered_embeddings.toarray())\n",
-    "        self.index = NearestNeighbors(**index_params).fit(filtered_embeddings)\n",
+    "        self.aliases = [t for t, f in zip(aliases, flags) if f]\n",
+    "        if self.bulk:\n",
+    "            self.index = faiss.IndexFlatL2(filtered_embeddings.shape[1])\n",
+    "            self.index.add(filtered_embeddings.toarray())\n",
+    "        else:\n",
+    "            self.index = NearestNeighbors(**index_params)\n",
+    "            self.index.fit(filtered_embeddings)\n",
+    "        self._stats()\n",
     "    \n",
     "    def save_pretrained(self, dirpath):\n",
     "        with open(f'{dirpath}/model', 'wb') as f:\n",
     "            pickle.dump(linker.ontology, f)\n",
-    "            pickle.dump(linker.terms, f)\n",
+    "            pickle.dump(linker.aliases, f)\n",
     "            pickle.dump(linker.model, f)\n",
-    "            pickle.dump(linker.index, f)\n",
-    "        # TODO Disabled to lower memory footprint for Jupyter Hub.\n",
-    "        # faiss.write_index(linker.index, f'{dirpath}/index')\n",
+    "            if not self.bulk:\n",
+    "                pickle.dump(linker.index, f)\n",
+    "        if self.bulk:\n",
+    "            faiss.write_index(linker.index, f'{dirpath}/index')\n",
     "    \n",
     "    @staticmethod\n",
-    "    def from_pretrained(dirpath, nlp):\n",
-    "        linker = EntityLinker(nlp)\n",
+    "    def from_pretrained(dirpath, bulk):\n",
+    "        linker = EntityLinker(bulk)\n",
     "        with open(f'{dirpath}/model', 'rb') as f:\n",
     "            linker.ontology = pickle.load(f)\n",
-    "            linker.terms = pickle.load(f)\n",
+    "            linker.aliases = pickle.load(f)\n",
     "            linker.model = pickle.load(f)\n",
-    "            linker.index = pickle.load(f)\n",
-    "        # TODO Disabled to lower memory footprint for Jupyter Hub.\n",
-    "        # linker.index = faiss.read_index(f'{dirpath}/index')\n",
-    "        return linker"
+    "            if not bulk:\n",
+    "                linker.index = pickle.load(f)\n",
+    "        if bulk:\n",
+    "            linker.index = faiss.read_index(f'{dirpath}/index')\n",
+    "        linker._stats()\n",
+    "        return linker\n",
+    "\n",
+    "    def _stats(self):\n",
+    "        ccount = len(self.ontology)\n",
+    "        tcount = len(self.aliases)\n",
+    "        print(f'INFO   EntityLinker   Links to {ccount} concepts ({tcount} aliases).')"
    ]
   },
   {
@@ -721,17 +723,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FIXME Disabled to lower memory footprint for Jupyter Hub.\n",
-    "spacy_model = None  # spacy.load('en_ner_craft_md')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "linker = EntityLinker.from_pretrained('shared-data/entity-linking', spacy_model)"
+    "linker = EntityLinker.from_pretrained('shared-data/entity-linking/', bulk=False)"
    ]
   },
   {
@@ -748,8 +740,8 @@
     "        new = deepcopy(ann)\n",
     "        if can:\n",
     "            new['body'] = {\n",
-    "                '@id': can[1].identifier,\n",
-    "                'label': can[1].term,\n",
+    "                '@id': can.uid,\n",
+    "                'label': can.concept,\n",
     "            }\n",
     "        return new\n",
     "    mentions = [x['target']['selector']['exact'] for x in annotations]\n",
