--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -23,6 +23,7 @@
     "\n",
     "import IPython\n",
     "import ipywidgets\n",
+    "import mysql.connector\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
@@ -83,16 +84,14 @@
    "outputs": [],
    "source": [
     "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\")\n",
-    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\") or '/raid/bbs_data/'\n",
+    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\") \n",
     "BBS_DATA_PATH = Path(BBS_DATA_PATH)\n",
     "\n",
     "CORD19_VERSION = 'v7'\n",
     "\n",
     "cord_path = BBS_DATA_PATH / f'cord19_{CORD19_VERSION}'\n",
-    "db_path = cord_path / 'databases' / 'cord19.db'\n",
     "trained_models_path = BBS_DATA_PATH / 'trained_models'\n",
     "\n",
-    "assert db_path.is_file()\n",
     "assert SEARCH_ENGINE_URL is not None"
    ]
   },
@@ -107,7 +106,16 @@
     "\n",
     "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
     "\n",
-    "database = sqlite3.connect(str(db_path))"
+    "cnx = mysql.connector.connect(user='root', password='password',\n",
+    "                              host='dgx1.bbp.epfl.ch',\n",
+    "                              port= 3306, \n",
+    "                             database='cord19_test')\n",
+    "database_cursor = cnx.cursor()\n",
+    "\n",
+    "cnx2 = mysql.connector.connect(user='root', password='password',\n",
+    "                              host='dgx1.bbp.epfl.ch',\n",
+    "                              port= 3306, \n",
+    "                             database='cord19_test')"
    ]
   },
   {
@@ -116,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "article_saver = ArticleSaver(database=database)"
+    "article_saver = ArticleSaver(database=database_cursor)"
    ]
   },
   {
@@ -125,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbs_widget = Widget(searcher, database, article_saver=article_saver)\n",
+    "bbs_widget = Widget(searcher, cnx2, article_saver=article_saver)\n",
     "bbs_widget.display()"
    ]
   },
