Fix another breaking change introduced by PR #55

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -567,6 +567,7 @@
     "                        \"start\":\"oa:start\",\n",
     "                        \"end\":\"oa:end\",\n",
     "                        \"exact\":\"oa:exact\",\n",
+    "                        \"body\": \"oa:body\",\n",
     "                        \"label\":\"rdfs:label\",\n",
     "                        \"rdf\":\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\",\n",
     "                        \"rdfs\":\"http://www.w3.org/2000/01/rdf-schema#\",\n",
