--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -30,6 +30,8 @@
     "import scispacy\n",
     "import spacy\n",
     "import nltk\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.orm import sessionmaker\n",
     "\n",
     "from bbsearch.article_saver import ArticleSaver\n",
     "from bbsearch.remote_searcher import RemoteSearcher\n",
@@ -84,7 +86,7 @@
    "outputs": [],
    "source": [
     "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\")\n",
-    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\") \n",
+    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\")\n",
     "BBS_DATA_PATH = Path(BBS_DATA_PATH)\n",
     "\n",
     "CORD19_VERSION = 'v7'\n",
@@ -106,16 +108,8 @@
     "\n",
     "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
     "\n",
-    "cnx = mysql.connector.connect(user='root', password='password',\n",
-    "                              host='dgx1.bbp.epfl.ch',\n",
-    "                              port= 3306, \n",
-    "                             database='cord19_test')\n",
-    "database_cursor = cnx.cursor()\n",
-    "\n",
-    "cnx2 = mysql.connector.connect(user='root', password='password',\n",
-    "                              host='dgx1.bbp.epfl.ch',\n",
-    "                              port= 3306, \n",
-    "                             database='cord19_test')"
+    "engine = sqlalchemy.create_engine('mysql+mysqlconnector://root:password@dgx1.bbp.epfl.ch:3306/cord19_test')\n",
+    "session = sessionmaker(bind=engine)()"
    ]
   },
   {
@@ -124,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "article_saver = ArticleSaver(database=database_cursor)"
+    "article_saver = ArticleSaver(database=engine)"
    ]
   },
   {
@@ -133,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbs_widget = Widget(searcher, cnx2, article_saver=article_saver)\n",
+    "bbs_widget = Widget(searcher, session, article_saver=article_saver)\n",
     "bbs_widget.display()"
    ]
   },
@@ -217,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\")\n",
+    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\") \n",
     "assert TEXT_MINING_URL is not None"
    ]
   },
