Correct small inconsistencies

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\")\n",
-    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\")\n",
+    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\") or '/raid/bbs_data/'\n",
     "BBS_DATA_PATH = Path(BBS_DATA_PATH)\n",
     "\n",
     "CORD19_VERSION = 'v7'\n",
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\") \n",
+    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\")\n",
     "assert TEXT_MINING_URL is not None"
    ]
   },
