Add if statement in article saver

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,11 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\")\n",
+    "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\") or 'http://dgx1.bbp.epfl.ch:8850'\n",
     "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\") or '/raid/bbs_data/'\n",
     "BBS_DATA_PATH = Path(BBS_DATA_PATH)\n",
     "\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,13 +107,14 @@
     "\n",
     "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
     "\n",
+    "#engine = sqlalchemy.create_engine('sqlite:///cord19.db')\n",
     "engine = sqlalchemy.create_engine('mysql+mysqlconnector://root:password@dgx1.bbp.epfl.ch:3306/cord19_test')\n",
     "session = sessionmaker(bind=engine)()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,11 +123,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2040bac1ef4c49dc97f1afadd63b2d69",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(ToggleButtons(description='Model for Sentence Embedding', options=('BSV', 'SBioBERT'), tooltips…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "bbs_widget = Widget(searcher, session, article_saver=article_saver)\n",
+    "bbs_widget = Widget(searcher, session=session, article_saver=article_saver)\n",
     "bbs_widget.display()"
    ]
   },
@@ -139,9 +155,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>paragraph_id</th>\n",
+       "      <th>option</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>54o2p36a</td>\n",
+       "      <td>255912</td>\n",
+       "      <td>Extract the entire article</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>nrdiqees</td>\n",
+       "      <td>1195240</td>\n",
+       "      <td>Extract the entire article</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>skknfc6h</td>\n",
+       "      <td>1439351</td>\n",
+       "      <td>Extract the entire article</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>zph6r4il</td>\n",
+       "      <td>1793024</td>\n",
+       "      <td>Extract the entire article</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1g0mz73b</td>\n",
+       "      <td>69649</td>\n",
+       "      <td>Extract the entire article</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1g0mz73b</td>\n",
+       "      <td>69650</td>\n",
+       "      <td>Extract the entire article</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>hxaix2al</td>\n",
+       "      <td>902438</td>\n",
+       "      <td>Extract the entire article</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>w3fsxg90</td>\n",
+       "      <td>1618043</td>\n",
+       "      <td>Extract the entire article</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>hxaix2al</td>\n",
+       "      <td>902439</td>\n",
+       "      <td>Extract the entire article</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>w3fsxg90</td>\n",
+       "      <td>1618035</td>\n",
+       "      <td>Extract the entire article</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  article_id  paragraph_id                      option\n",
+       "0   54o2p36a        255912  Extract the entire article\n",
+       "1   nrdiqees       1195240  Extract the entire article\n",
+       "2   skknfc6h       1439351  Extract the entire article\n",
+       "3   zph6r4il       1793024  Extract the entire article\n",
+       "4   1g0mz73b         69649  Extract the entire article\n",
+       "5   1g0mz73b         69650  Extract the entire article\n",
+       "6   hxaix2al        902438  Extract the entire article\n",
+       "7   w3fsxg90       1618043  Extract the entire article\n",
+       "8   hxaix2al        902439  Extract the entire article\n",
+       "9   w3fsxg90       1618035  Extract the entire article"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "table = article_saver.summary_table()\n",
     "display(table)"
@@ -184,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,17 +331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\")\n",
+    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\") or 'http://dgx1.bbp.epfl.ch:8852'\n",
     "assert TEXT_MINING_URL is not None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,11 +443,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "38283fc2f4b24ddda70d5e282d70bcea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Button(description='Mine Selected Articles!', layout=Layout(width='60%'), style=ButtonStyle()),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# \"Input Text\" Widget\n",
     "bbs_widgets['input_text'] = ipywidgets.Textarea(\n",
@@ -351,6 +491,24 @@
     "ordered_widgets = list(bbs_widgets.values())\n",
     "main_widget = ipywidgets.VBox(ordered_widgets)\n",
     "IPython.display.display(main_widget)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SQLAlchemy cord19.db\n",
+    "# second time \n",
+    "# text retrieve took 3.29 seconds\n",
+    "# 325 paragraphs\n",
+    "# 606 entities\n",
+    "# casting to list took 0.05 seconds\n",
+    "# server part took 5.66 seconds\n",
+    "\n",
+    "# SQLAlchemy MySQL\n",
+    "# first time "
    ]
   },
   {
