Draft SQLAlchemy transition

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -28,7 +28,9 @@
     "import requests\n",
     "import scispacy\n",
     "import spacy\n",
+    "import sqlalchemy\n",
     "import nltk\n",
+    "\n",
     "\n",
     "from bbsearch.article_saver import ArticleSaver\n",
     "from bbsearch.remote_searcher import RemoteSearcher\n",
@@ -88,11 +90,10 @@
     "\n",
     "CORD19_VERSION = 'v7'\n",
     "\n",
-    "cord_path = BBS_DATA_PATH / f'cord19_{CORD19_VERSION}'\n",
-    "db_path = cord_path / 'databases' / 'cord19.db'\n",
+    "# cord_path = BBS_DATA_PATH / f'cord19_{CORD19_VERSION}'\n",
+    "# db_path = cord_path / 'databases' / 'cord19.db'\n",
     "trained_models_path = BBS_DATA_PATH / 'trained_models'\n",
     "\n",
-    "assert db_path.is_file()\n",
     "assert SEARCH_ENGINE_URL is not None"
    ]
   },
@@ -107,7 +108,7 @@
     "\n",
     "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
     "\n",
-    "database = sqlite3.connect(str(db_path))"
+    "engine = sqlalchemy.create_engine('sqlite:///cord19.db')"
    ]
   },
   {
@@ -116,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "article_saver = ArticleSaver(database=database)"
+    "article_saver = ArticleSaver(engine=engine)"
    ]
   },
   {
@@ -125,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbs_widget = Widget(searcher, database, article_saver=article_saver)\n",
+    "bbs_widget = Widget(searcher, engine=engine, article_saver=article_saver)\n",
     "bbs_widget.display()"
    ]
   },
