--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -15,27 +15,20 @@
    "outputs": [],
    "source": [
     "from collections import OrderedDict\n",
-    "import logging\n",
     "import io\n",
     "import os\n",
-    "from pathlib import Path\n",
-    "import sqlite3\n",
+    "import pathlib\n",
     "\n",
     "import IPython\n",
     "import ipywidgets\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
-    "import scispacy\n",
-    "import spacy\n",
     "import sqlalchemy\n",
-    "import nltk\n",
-    "\n",
     "\n",
     "from bbsearch.article_saver import ArticleSaver\n",
     "from bbsearch.remote_searcher import RemoteSearcher\n",
-    "from bbsearch.widget import Widget\n",
-    "from bbsearch.utils import Timer"
+    "from bbsearch.utils import Timer\n",
+    "from bbsearch.widget import Widget"
    ]
   },
   {
@@ -79,22 +72,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "URLs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\")\n",
-    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\") or '/raid/bbs_data/'\n",
-    "BBS_DATA_PATH = Path(BBS_DATA_PATH)\n",
+    "SEARCH_ENGINE_URL = os.getenv(\"SEARCH_ENGINE_URL\", \"http://dgx1.bbp.epfl.ch:8850\")\n",
+    "assert SEARCH_ENGINE_URL is not None\n",
+    "\n",
+    "response = requests.post(\"{}/help\".format(SEARCH_ENGINE_URL))\n",
+    "assert response.ok and response.json()['name'] == 'SearchServer', \"The server is not accessible\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\", \"/raid/bbs_data/\")\n",
+    "BBS_DATA_PATH = pathlib.Path(BBS_DATA_PATH)\n",
     "\n",
     "CORD19_VERSION = 'v7'\n",
     "\n",
-    "# cord_path = BBS_DATA_PATH / f'cord19_{CORD19_VERSION}'\n",
-    "# db_path = cord_path / 'databases' / 'cord19.db'\n",
-    "trained_models_path = BBS_DATA_PATH / 'trained_models'\n",
-    "\n",
-    "assert SEARCH_ENGINE_URL is not None"
+    "cord_path = BBS_DATA_PATH / f'cord19_{CORD19_VERSION}'\n",
+    "db_path = cord_path / 'databases' / 'cord19.db'\n",
+    "trained_models_path = BBS_DATA_PATH / 'trained_models'"
    ]
   },
   {
@@ -103,12 +120,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.post(\"{}/help\".format(SEARCH_ENGINE_URL))\n",
-    "assert response.ok and response.json()['name'] == 'SearchServer', \"The server is not accessible\"\n",
-    "\n",
     "searcher = RemoteSearcher(SEARCH_ENGINE_URL)\n",
-    "\n",
-    "engine = sqlalchemy.create_engine('sqlite:///cord19.db')"
+    "engine = sqlalchemy.create_engine(f\"sqlite:///{db_path}\")\n",
+    "article_saver = ArticleSaver(connection=engine)"
    ]
   },
   {
@@ -117,16 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "article_saver = ArticleSaver(engine=engine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bbs_widget = Widget(searcher, engine=engine, article_saver=article_saver)\n",
+    "bbs_widget = Widget(searcher, connection=engine, article_saver=article_saver)\n",
     "bbs_widget.display()"
    ]
   },
@@ -210,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\")\n",
+    "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\", \"http://dgx1.bbp.epfl.ch:8852\")\n",
     "assert TEXT_MINING_URL is not None"
    ]
   },
@@ -319,9 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# \"Input Text\" Widget\n",
@@ -1253,7 +1256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true
  },
