--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,30 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f5b8f87fc08443093db73a34e766ec6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "SearchWidget(children=(ToggleButtons(description='Model for Sentence Embedding', options=('BSV', 'SBioBERT'), …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "search_widget = SearchWidget(\n",
     "    searcher=searcher,\n",
     "    connection=engine,\n",
     "    article_saver=article_saver,\n",
-    "    results_per_page=3)\n",
+    "    results_per_page=3,\n",
+    "    top_n_max=100)\n",
     "search_widget"
    ]
   },
@@ -162,8 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = article_saver.summary_table()\n",
-    "display(table)"
+    "article_saver.summary_table()"
    ]
   },
   {
@@ -179,18 +164,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "article_saver.retrieve_text()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "article_saver.df_chosen_texts"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
