Add request dataframe in notebook

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -165,7 +165,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "columns = ['entity_type', 'property', 'property_type', 'property_value_type', 'ontology_source']\n",
+    "\n",
+    "etypes_sources = [('CELL_TYPE', None), \n",
+    "                  ('CHEMICAL', 'NCIT'), \n",
+    "                  ('CONDITION', None),\n",
+    "                  ('DISEASE', 'NCIT'),\n",
+    "                  ('ORGAN', 'NCIT'),\n",
+    "                  ('ORGANISM', 'NCIT'),\n",
+    "                  ('PATHWAY', 'Reactome'),\n",
+    "                  ('PROTEIN', 'NCIT')\n",
+    "                 ]\n",
+    "table_request = [{'entity_type': etype, 'ontology_source': source} \n",
+    "                 for etype, source in etypes_sources]\n",
+    "\n",
+    "df_request = pd.DataFrame(table_request, columns=columns)\n",
+    "display(df_request)"
+   ]
   },
   {
    "cell_type": "markdown",
