Send CSV request in widget

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -177,11 +177,11 @@
     "                  ('PATHWAY', 'Reactome'),\n",
     "                  ('PROTEIN', 'NCIT')\n",
     "                 ]\n",
-    "table_request = [{'entity_type': etype, 'ontology_source': source} \n",
+    "schema_request = [{'entity_type': etype, 'ontology_source': source} \n",
     "                 for etype, source in etypes_sources]\n",
     "\n",
-    "df_request = pd.DataFrame(table_request, columns=columns)\n",
-    "display(df_request)"
+    "schema_request = pd.DataFrame(schema_request, columns=columns)\n",
+    "display(schema_request)"
    ]
   },
   {
@@ -246,7 +246,7 @@
     "\n",
     "assert response.ok and response.json()['name'] == 'MiningServer'\n",
     "\n",
-    "def textmining_pipeline(information, debug=False):\n",
+    "def textmining_pipeline(information, schema, debug=False):\n",
     "    \"\"\"Handle text mining server requests depending on the type of information.\n",
     "    \n",
     "    Parameters\n",
@@ -254,6 +254,9 @@
     "    information: str or list.\n",
     "        Information can be either a raw string text, either a list of tuples \n",
     "        (article_id, paragraph_id) related to the database.\n",
+    "    schema : pd.DataFrame\n",
+    "        Mining request schema. Schould have the following columns:\n",
+    "        'entity_type', 'property', 'property_type', 'property_value_type', 'ontology_source'.\n",
     "    debug : bool\n",
     "        If True, columns are not necessarily matching the specification. However, they\n",
     "        contain debugging information. If False, then matching exactly the specification.\n",
@@ -264,14 +267,20 @@
     "        The final table. If `debug=True` then it contains all the metadata. If False then it\n",
     "        only contains columns in the official specification.\n",
     "    \"\"\"\n",
+    "    schema = schema.to_csv(path_or_buf=None, index=False)\n",
+    "    \n",
     "    if isinstance(information, list):\n",
     "        request_json = {\n",
-    "            \"identifiers\": information}\n",
+    "            \"identifiers\": information,\n",
+    "            \"schema\": schema\n",
+    "        }\n",
     "        response = requests.post(TEXT_MINING_URL + '/database', json=request_json)\n",
     "    elif isinstance(information, str):\n",
     "        request_json = {\n",
     "            \"text\": information,\n",
-    "            \"debug\": debug}\n",
+    "            \"schema\": schema,\n",
+    "            \"debug\": debug,\n",
+    "        }\n",
     "        response = requests.post(TEXT_MINING_URL + '/text', json=request_json)\n",
     "    else:\n",
     "        raise TypeError('Wrong type for the information!')\n",
@@ -332,7 +341,7 @@
     "            identifiers = [(row['article_id'], row['paragraph_id']) for _, row in chosen_text.iterrows()]\n",
     "            print(len(identifiers))\n",
     "        with timer('server part'):\n",
-    "            table_extractions = textmining_pipeline(information=identifiers)\n",
+    "            table_extractions = textmining_pipeline(information=identifiers, schema=schema_request)\n",
     "            display(table_extractions)\n",
     "        \n",
     "bbs_widgets['articles_button'].on_click(article_button)"
@@ -360,7 +369,7 @@
     "    bbs_widgets['out'].clear_output()\n",
     "    with bbs_widgets['out']:\n",
     "        text = bbs_widgets['input_text'].value\n",
-    "        table_extractions = textmining_pipeline(text)\n",
+    "        table_extractions = textmining_pipeline(information=text, schema=schema_request)\n",
     "        display(table_extractions)\n",
     "bbs_widgets['submit_button'].on_click(cb)\n",
     "\n",
