--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -14,21 +14,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import OrderedDict\n",
-    "import io\n",
     "import os\n",
     "import pathlib\n",
     "\n",
-    "import IPython\n",
-    "import ipywidgets\n",
     "import pandas as pd\n",
     "import requests\n",
     "import sqlalchemy\n",
     "\n",
-    "from bbsearch.article_saver import ArticleSaver\n",
+    "import bbsearch as bbs\n",
     "from bbsearch.remote_searcher import RemoteSearcher\n",
-    "from bbsearch.utils import Timer\n",
-    "from bbsearch.widget import Widget"
+    "from bbsearch.widgets import ArticleSaver, SearchWidget, MiningWidget"
    ]
   },
   {
@@ -131,8 +126,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbs_widget = Widget(searcher, connection=engine, article_saver=article_saver)\n",
-    "bbs_widget.display()"
+    "search_widget = SearchWidget(\n",
+    "    searcher=searcher,\n",
+    "    connection=engine,\n",
+    "    article_saver=article_saver,\n",
+    "    results_per_page=3,\n",
+    "    top_n_max=100)\n",
+    "search_widget"
    ]
   },
   {
@@ -148,8 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = article_saver.summary_table()\n",
-    "display(table)"
+    "article_saver.summary_table()"
    ]
   },
   {
@@ -216,59 +215,10 @@
    "outputs": [],
    "source": [
     "TEXT_MINING_URL = os.getenv(\"TEXT_MINING_URL\", \"http://dgx1.bbp.epfl.ch:8852\")\n",
-    "assert TEXT_MINING_URL is not None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "assert TEXT_MINING_URL is not None\n",
+    "\n",
     "response = requests.post(TEXT_MINING_URL + \"/help\")\n",
-    "\n",
-    "assert response.ok and response.json()['name'] == 'MiningServer'\n",
-    "\n",
-    "def textmining_pipeline(information, debug=False):\n",
-    "    \"\"\"Handle text mining server requests depending on the type of information.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    information: str or list.\n",
-    "        Information can be either a raw string text, either a list of tuples \n",
-    "        (article_id, paragraph_id) related to the database.\n",
-    "    debug : bool\n",
-    "        If True, columns are not necessarily matching the specification. However, they\n",
-    "        contain debugging information. If False, then matching exactly the specification.\n",
-    "        \n",
-    "    Returns\n",
-    "    -------\n",
-    "    table_extractions: pd.DataFrame\n",
-    "        The final table. If `debug=True` then it contains all the metadata. If False then it\n",
-    "        only contains columns in the official specification.\n",
-    "    \"\"\"\n",
-    "    if isinstance(information, list):\n",
-    "        request_json = {\n",
-    "            \"identifiers\": information}\n",
-    "        response = requests.post(TEXT_MINING_URL + '/database', json=request_json)\n",
-    "    elif isinstance(information, str):\n",
-    "        request_json = {\n",
-    "            \"text\": information,\n",
-    "            \"debug\": debug}\n",
-    "        response = requests.post(TEXT_MINING_URL + '/text', json=request_json)\n",
-    "    else:\n",
-    "        raise TypeError('Wrong type for the information!')\n",
-    "\n",
-    "    table_extractions = None\n",
-    "    if response.headers[\"Content-Type\"] == \"text/csv\":\n",
-    "        with io.StringIO(response.text) as f:\n",
-    "            table_extractions = pd.read_csv(f)\n",
-    "    else:\n",
-    "        print(\"Response content type is not text/csv.\")\n",
-    "        print(response.headers)\n",
-    "        print(response.text)\n",
-    "\n",
-    "    return table_extractions"
+    "assert response.ok and response.json()['name'] == 'MiningServer'"
    ]
   },
   {
@@ -277,8 +227,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is the output: csv table of extracted entities/relations.\n",
-    "table_extractions = None"
+    "mining_widget = MiningWidget(\n",
+    "    mining_server_url=TEXT_MINING_URL,\n",
+    "    article_saver=article_saver,\n",
+    "    default_text=DEFAULT_TEXT)"
    ]
   },
   {
@@ -287,73 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Widgets\n",
-    "bbs_widgets = OrderedDict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bbs_widgets['articles_button'] = ipywidgets.Button(\n",
-    "    description='Mine Selected Articles!',\n",
-    "    layout=ipywidgets.Layout(width='60%')\n",
-    ")\n",
-    "\n",
-    "def article_button(b):\n",
-    "    global table_extractions\n",
-    "    bbs_widgets['out'].clear_output()\n",
-    "    complete_text = ''\n",
-    "    with bbs_widgets['out']:\n",
-    "        timer = Timer(verbose=True)\n",
-    "        with timer('text retrieve'):\n",
-    "            article_saver.retrieve_text()\n",
-    "        with timer('casting to list'):\n",
-    "            chosen_text = article_saver.df_chosen_texts\n",
-    "            identifiers = [(row['article_id'], row['paragraph_id']) for _, row in chosen_text.iterrows()]\n",
-    "            print(len(identifiers))\n",
-    "        with timer('server part'):\n",
-    "            table_extractions = textmining_pipeline(information=identifiers)\n",
-    "            display(table_extractions)\n",
-    "        \n",
-    "bbs_widgets['articles_button'].on_click(article_button)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# \"Input Text\" Widget\n",
-    "bbs_widgets['input_text'] = ipywidgets.Textarea(\n",
-    "        value=DEFAULT_TEXT,\n",
-    "        layout=ipywidgets.Layout(width='75%', height='300px')\n",
-    "    )\n",
-    "\n",
-    "# \"Submit!\" Button\n",
-    "bbs_widgets['submit_button'] = ipywidgets.Button(\n",
-    "    description='Mine This Text!',\n",
-    "    layout=ipywidgets.Layout(width='30%')\n",
-    ")\n",
-    "def cb(b):\n",
-    "    global table_extractions\n",
-    "    bbs_widgets['out'].clear_output()\n",
-    "    with bbs_widgets['out']:\n",
-    "        text = bbs_widgets['input_text'].value\n",
-    "        table_extractions = textmining_pipeline(text)\n",
-    "        display(table_extractions)\n",
-    "bbs_widgets['submit_button'].on_click(cb)\n",
-    "\n",
-    "# \"Output Area\" Widget\n",
-    "bbs_widgets['out'] = ipywidgets.Output(layout={'border': '0.5px solid black'})\n",
-    "\n",
-    "# Finalize Widgets\n",
-    "ordered_widgets = list(bbs_widgets.values())\n",
-    "main_widget = ipywidgets.VBox(ordered_widgets)\n",
-    "IPython.display.display(main_widget)"
+    "mining_widget"
    ]
   },
   {
@@ -362,6 +248,15 @@
    "source": [
     "- **input**: csv table of extracted entities/relations\n",
     "- **output**: knowledge graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_extractions = mining_widget.get_extracted_table()"
    ]
   },
   {
