--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get an authentication token\n",
+    "# Use the Nexus Web application to get a token. Once a token is obtained, paste it below.\n",
     "import getpass\n",
     "TOKEN = getpass.getpass()"
    ]
@@ -66,6 +66,7 @@
    "outputs": [],
    "source": [
     "# Configure a 'forge' to manage (create, access and deploy) the knowledge graph within a given Blue Brain Nexus Project.\n",
+    "FORGE_CONFIG_FILE = os.getenv(\"FORGE_CONFIG_FILE\") assert (FORGE_CONFIG_FILE is not None) \n",
     "forge = KnowledgeGraphForge(FORGE_CONFIG_FILE,token=TOKEN)"
    ]
   },
@@ -1354,7 +1355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc-autonumbering": true
  },
