--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -66,7 +66,8 @@
    "outputs": [],
    "source": [
     "# Configure a 'forge' to manage (create, access and deploy) the knowledge graph within a given Blue Brain Nexus Project.\n",
-    "FORGE_CONFIG_FILE = os.getenv(\"FORGE_CONFIG_FILE\") assert (FORGE_CONFIG_FILE is not None) \n",
+    "FORGE_CONFIG_FILE = os.getenv(\"FORGE_CONFIG_FILE\") \n",
+    "assert (FORGE_CONFIG_FILE is not None) \n",
     "forge = KnowledgeGraphForge(FORGE_CONFIG_FILE,token=TOKEN)"
    ]
   },
