Updated extracted entities curation UI
 - Added export feature to save curated table as csv
 - Removing one row will remove all rows with same entity
 - Added two synchronised diagrams to view in a glance frequencies of entities

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -276,18 +276,13 @@
    "source": [
     "import jupyter_server_proxy\n",
     "import jupyter_dash\n",
-    "\n",
-    "import base64\n",
-    "import io\n",
     "import dash\n",
     "from dash.dependencies import Input, Output, State\n",
     "import dash_core_components as dcc\n",
     "import dash_html_components as html\n",
     "import dash_table\n",
-    "import pandas as pd\n",
-    "#from jupyter_plotly_dash import JupyterDash\n",
     "from jupyter_dash import JupyterDash\n",
-    "import requests"
+    "import plotly.express as px"
    ]
   },
   {
@@ -325,57 +320,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = JupyterDash('SimpleExample')\n",
+    "app = JupyterDash('Extracted Entities Curation App')\n",
     "\n",
-    "# Create server variable with Flask server object for use with gunicorn\n",
     "server = app.server\n",
     "\n",
+    "# Define UI layout\n",
     "app.layout = html.Div(\n",
     "    [\n",
-    "       \n",
-    "    dcc.Store(id='memory', data=data),\n",
+    "        dcc.Store(id='memory', data=data),\n",
     "\n",
-    "    dash_table.DataTable(\n",
-    "        id='datatable-upload-container',\n",
-    "        # fixed_rows={ 'headers': True, 'data': 0 },\n",
-    "        style_cell={\n",
-    "            'whiteSpace': 'normal'\n",
-    "        },\n",
-    "       \n",
-    "        style_data_conditional=[\n",
-    "            {\n",
-    "                'if': {'row_index': 'odd'},\n",
-    "                'backgroundColor': 'rgb(248, 248, 248)'\n",
-    "            }\n",
-    "        ],\n",
-    "        style_header={\n",
-    "            'backgroundColor': 'rgb(230, 230, 230)',\n",
-    "            'fontWeight': 'bold'\n",
-    "        },\n",
-    "        css=[\n",
-    "            {\n",
-    "                'selector': 'dash-fixed-content',\n",
-    "                'rule': 'height: 800;'\n",
-    "            }\n",
-    "        ],\n",
-    "        \n",
-    "        #style_table={'height': '700px'},\n",
-    "        # data = table.to_dict('records'),\n",
-    "        virtualization=True,\n",
-    "        sort_action=\"native\",\n",
-    "        sort_mode=\"multi\",\n",
-    "        column_selectable=\"multi\",\n",
-    "        filter_action=\"native\",\n",
-    "        selected_columns=[],\n",
+    "        dash_table.DataTable(\n",
+    "                id='datatable-upload-container',\n",
+    "                style_cell={\n",
+    "                    'whiteSpace': 'normal'\n",
+    "                },\n",
     "\n",
-    "        page_action=\"native\",\n",
-    "        selected_rows=[],\n",
-    "        page_current=0,\n",
-    "        page_size=30)\n",
+    "                style_data_conditional=[\n",
+    "                    {\n",
+    "                        'if': {'row_index': 'odd'},\n",
+    "                        'backgroundColor': 'rgb(248, 248, 248)'\n",
+    "                    }\n",
+    "                ],\n",
+    "                style_header={\n",
+    "                    'backgroundColor': 'rgb(230, 230, 230)',\n",
+    "                    'fontWeight': 'bold'\n",
+    "                },\n",
+    "\n",
+    "                css=[\n",
+    "                    {\n",
+    "                        'selector': 'dash-fixed-content',\n",
+    "                        'rule': 'height: 800;'\n",
+    "                    }\n",
+    "                ],\n",
+    "                virtualization=True,\n",
+    "                sort_action=\"native\",\n",
+    "                sort_mode=\"multi\",\n",
+    "                column_selectable=\"multi\",\n",
+    "                filter_action=\"native\",\n",
+    "                selected_columns=[],\n",
+    "                page_action=\"native\",\n",
+    "                export_format='csv',\n",
+    "                export_headers='display',\n",
+    "                merge_duplicate_headers=True,\n",
+    "                selected_rows=[],\n",
+    "                page_current=0,\n",
+    "                page_size=30,\n",
+    "\n",
+    "            ),\n",
+    "\n",
+    "            html.Br(),\n",
+    "            dcc.Tabs(id='tabs', \n",
+    "                     children=[\n",
+    "                        dcc.Tab(label='View extracted entities in a Bar diagram', children=[dcc.Graph(id='datatable-upload-graph')]),\n",
+    "                        dcc.Tab(label='View extracted entities in a Scatter diagram', children=[dcc.Graph(id='datatable-upload-Scatter')])\n",
+    "                     ]\n",
+    "            )\n",
     "    \n",
-    "]\n",
+    "    ]\n",
     ")\n",
     "\n",
+    "# Define callbacks\n",
     "@app.callback(\n",
     "    Output('datatable-upload-container', 'style_data_conditional'),\n",
     "    [Input('datatable-upload-container', 'selected_columns')]\n",
@@ -387,6 +391,7 @@
     "    } for i in selected_columns]\n",
     "\n",
     "\n",
+    "\n",
     "@app.callback([Output('memory', 'data'),\n",
     "               Output('datatable-upload-container', 'data'),\n",
     "               Output('datatable-upload-container', 'columns'),\n",
@@ -395,25 +400,69 @@
     "\n",
     "              [Input('datatable-upload-container', 'page_size'),\n",
     "               Input('datatable-upload-container', 'page_current'),\n",
-    "               Input('datatable-upload-container','data_timestamp')],\n",
+    "               Input('datatable-upload-container','data_timestamp'),\n",
+    "               Input('datatable-upload-container', 'data_previous')\n",
+    "              ],\n",
     "\n",
     "              [State(\"datatable-upload-container\", \"data\"),\n",
     "               State(\"datatable-upload-container\", \"columns\"),\n",
     "              State(\"memory\", \"data\")])\n",
     "\n",
-    "def update_output(page_size, page_current, ts,data,columns,memory_data):\n",
+    "def update_output(page_size, page_current, ts,data_previous, data,columns,memory_data):\n",
     "   \n",
     "    if ts is None:\n",
     "        data = table_extractions.to_dict('records')\n",
-    "        columns= [{\"name\": i, \"id\": i, \"clearable\": True, \"selectable\": True, \"renamable\": True, \"hideable\": True, \"deletable\": True} for i in table_extractions.columns]\n",
+    "        \n",
+    "        # if i not in [\"ontology_source\",\"paper_id\",\"start_char\",\"end_char\",\"confidence_score\"]\n",
+    "        columns= [{\"name\": i, \"id\": i, \"clearable\": True, \"selectable\": True, \"renamable\": True, \"hideable\": True, \"deletable\": False} for i in table_extractions.columns ]\n",
     "    global curated_table_extractions\n",
     "    curated_table_extractions = pd.DataFrame(list(data))\n",
     "    \n",
-    "    return data, data, columns, True, True\n",
+    "    if data_previous:\n",
+    "        removed = [row for row in data_previous if row not in data]\n",
+    "        for row in removed:\n",
+    "            curated_table_extractions= curated_table_extractions[curated_table_extractions.entity != row[\"entity\"]]\n",
+    "    df = pd.DataFrame(data)\n",
+    "   \n",
+    "            \n",
+    "    return curated_table_extractions.to_dict('records'), curated_table_extractions.to_dict('records'), columns, True, True\n",
+    "\n",
+    "@app.callback([Output('datatable-upload-graph', 'figure'),\n",
+    "               Output('datatable-upload-Scatter', 'figure')],\n",
+    "              [Input('datatable-upload-container', 'data_timestamp'),Input('datatable-upload-container', 'data')],)\n",
+    "def display_graph(dts, rows):\n",
+    "    df = pd.DataFrame(rows)\n",
+    "    \n",
+    "    \n",
+    "    if (df.empty or len(df.columns) < 1):\n",
+    "        bar = {\n",
+    "            'data': [{\n",
+    "                'x': [],\n",
+    "                'y': [],\n",
+    "                'type': 'bar'\n",
+    "            }]\n",
+    "        }\n",
+    "        scatter = {\n",
+    "                'data': [{\n",
+    "                    'x': [],\n",
+    "                    'y': []\n",
+    "                }]\n",
+    "            }\n",
+    "    else:\n",
+    "        if \"paper_id\" in df:\n",
+    "        \n",
+    "            df[\"paper_id\"] = df[\"paper_id\"].transform(lambda x:  str(x).split(\":\")[0])\n",
+    "            df_grouped = df[[\"paper_id\",\"entity_type\",\"entity\"]].groupby([\"entity\",\"entity_type\"]).paper_id.nunique().reset_index()\n",
+    "            df_grouped = df_grouped.rename(columns={\"paper_id\": \"Frequency\"})\n",
+    "            bar = px.bar(df_grouped, x=df_grouped.entity, y=df_grouped.Frequency, color=\"entity_type\")\n",
+    "            scatter = px.scatter(df_grouped, x=df_grouped.entity, y=df_grouped.Frequency, color=\"entity_type\")\n",
+    "            \n",
+    "    return [bar,scatter]\n",
+    "\n",
     "\n",
     "app.width = \"100%\"\n",
-    "app.height = \"800\"\n",
-    "app.run_server(mode=\"inline\")"
+    "app.height = \"3000px\"\n",
+    "app.run_server(mode=\"jupyterlab\")"
    ]
   },
   {
@@ -1137,9 +1186,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:kgforge_is_awesome]",
    "language": "python",
-   "name": "python3"
+   "name": "kgforge_is_awesome"
   },
   "language_info": {
    "codemirror_mode": {
