Replace /raid/bbs_data with /raid/sync/proj115/bbs_data

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\", \"/raid/bbs_data/\")\n",
+    "BBS_DATA_PATH = os.getenv(\"BBS_DATA_PATH\", \"/raid/sync/proj115/bbs_data/\")\n",
     "BBS_DATA_PATH = pathlib.Path(BBS_DATA_PATH)\n",
     "\n",
     "CORD19_VERSION = 'v7'\n",
